--- a/e-commerce/nike-store/src/index.css
+++ b/e-commerce/nike-store/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,12 +7,12 @@
     * {
         margin: 0;
         padding: 0;
-        font-family: "Poppins", sans-serif;
+        font-family: 'Poppins', sans-serif;
     }
 
     /* container */
     .nike-container {
-        @apply w-11/12 m-auto;
+        @apply m-auto w-11/12;
     }
 
     /* Scroll */
@@ -31,16 +31,12 @@
         @apply bg-slate-700;
     }
     .scroll-style::-webkit-scrollbar-thumb {
-        @apply rounded-full bg-gradient-to-tr from-blue-500 to-green-500 via-teal-500;
+        @apply rounded-full bg-gradient-to-tr from-blue-500 via-teal-500 to-green-500;
     }
 
     /* Theme-Colors */
     .bg-theme {
-        background-image: linear-gradient(
-            0.2deg,
-            rgba(40, 173, 222, 1) 4.8%,
-            rgb(27, 76, 224) 85.5%
-        );
+        background-image: linear-gradient(0.2deg, rgba(40, 173, 222, 1) 4.8%, rgb(27, 76, 224) 85.5%);
     }
     .bg-theme-cart {
         @apply bg-gradient-to-b from-slate-900 to-gray-900 shadow-sm shadow-gray-900;
@@ -53,17 +49,17 @@
 
     /* Blur-Effect */
     .blur-effect-theme {
-        @apply bg-white/50 bg-clip-padding backdrop-filter backdrop-blur bg-opacity-50 opacity-100 z-[100] shadow-sm shadow-slate-100 transition-all duration-300;
+        @apply z-[100] bg-white/50 bg-opacity-50 bg-clip-padding opacity-100 shadow-sm shadow-slate-100 backdrop-blur backdrop-filter transition-all duration-300;
     }
 
     /* Icon Stles */
     .icon-style {
-        @apply h-6 w-6 sm:h-5 sm:w-5 text-slate-100 cursor-pointer transition-all duration-100 active:scale-110 leading-tight;
+        @apply h-6 w-6 cursor-pointer leading-tight text-slate-100 transition-all duration-100 active:scale-110 sm:h-5 sm:w-5;
     }
 
     /* text-gradient */
     .text-gradient {
-        @apply text-transparent bg-clip-text bg-gradient-to-tr from-blue-500 to-sky-500;
+        @apply bg-gradient-to-tr from-blue-500 to-sky-500 bg-clip-text text-transparent;
     }
 
     /* border */
@@ -73,11 +69,11 @@
 
     /* button */
     .button-theme {
-        @apply px-7 py-1 rounded active:scale-90 transition-all duration-100 ease-in-out shadow-md sm:text-sm;
+        @apply rounded px-7 py-1 shadow-md transition-all duration-100 ease-in-out active:scale-90 sm:text-sm;
     }
 
     /* tranistions-theme */
     .transitions-theme {
-        @apply transition-all duration-700 ease-in-out cursor-pointer;
+        @apply cursor-pointer transition-all duration-700 ease-in-out;
     }
 }
